<resources>
    <string name="app_name">Rowdy Music</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Sign Up</string>
    <string name="email_prompt">Email</string>
    <string name="password_prompt">Password</string>
    <string name="submit_text">Submit</string>
    <string name="conf_password_prompt">Confirm Password</string>
    <string name="new_alarm">New Alarm</string>
    <string name="title_activity_create_alarm">createAlarmActivity</string>
    <string name="ok">OK</string>
    <string name="button">Create</string>
    <string name="delete">Delete</string>
    <string name="rock_genre">Rock</string>
    <string name="pop_genre">Pop</string>
    <string name="rap_genre">Rap</string>
    <string name="alt_genre">Alternative</string>
    <string name="jazz_genre">Jazz</string>
    <string name="punk_genre">Punk</string>
    <string name="Title">Swag Music</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="action_settings">Settings</string>
    <string name="Alarm">Alarm</string>
    <string name="Player">Player</string>
    <string name="News_Feed">News Feed</string>
    <string name="Radios">Radios</string>
    <string name="pause_music">Pause Music</string>
    <string name="music_volume">Music volume</string>
    <string name="play_music">Play Music</string>
    <string name="skip_to_next_track">Skip to Next Track</string>
    <string name="station_image">Station Image</string>
</resources>
